--- a/404.html
+++ b/404.html
@@ -8,352 +8,129 @@
     <meta name="robots" content="noindex" >
     <link rel="stylesheet" href="/assets/main.css">
   <style>
-  /* =Glitch effect, Source: http://codepen.io/bulby97/pen/fcvay */ /*************************************************************/
-.glitch {
-  position: relative;
-  animation: glitch 2s steps(100) infinite;
+  /* =Glitch effect, Source: https://codepen.io/dmwhy/pen/oLMBEv */ 
+  /*************************************************************/
+  @keyframes noise{
+0% {background-position-y: 0px;}
+100% {background-position-y: -420px;}
 }
 
-@keyframes glitch {
-  0% {
-    text-shadow: 1px 0 0 red, -1px 0 0 blue;
-  }
-  1% {
-    text-shadow: 1px 0 0 red, -1px 0 0 blue;
-  }
-  2% {
-    text-shadow: 1px 0 0 red, -1px 0 0 blue;
-  }
-  3% {
-    text-shadow: 1px 0 0 red, -1px 0 0 blue;
-  }
-  4% {
-    text-shadow: 1px 0 0 red, -1px 0 0 blue;
-  }
-  5% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  6% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  7% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  8% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  9% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  10% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  11% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
-  }
-  12% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
-  }
-  13% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
-  }
-  14% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
-  }
-  15% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
-  }
-  16% {
-    text-shadow: -1px 0 0 red, 1px 0 0 lime;
-  }
-  17% {
-    text-shadow: -1px 0 0 red, 1px 0 0 lime;
-  }
-  18% {
-    text-shadow: -1px 0 0 red, 1px 0 0 lime;
-  }
-  19% {
-    text-shadow: -1px 0 0 red, 1px 0 0 lime;
-  }
-  20% {
-    text-shadow: -1px 0 0 red, 1px 0 0 lime;
-  }
-  21% {
-    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
-  }
-  22% {
-    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
-  }
-  23% {
-    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
-  }
-  24% {
-    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
-  }
-  25% {
-    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
-  }
-  26% {
-    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
-  }
-  27% {
-    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
-  }
-  28% {
-    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
-  }
-  29% {
-    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
-  }
-  30% {
-    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
-  }
-  31% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
-  32% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
-  33% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
-  34% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
-  35% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
-  36% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
-  37% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
-  38% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
-  39% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
-  40% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
-  41% {
-    text-shadow: 50px 0 0 blue, -50px 0 0 lime;
-  }
-  42% {
-    text-shadow: 0 0 0 blue, 0 0 0 lime;
-  }
-  43% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
-  }
-  44% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
-  }
-  45% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
-  }
-  46% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
-  }
-  47% {
-    text-shadow: -1px 0 0 red, 1px 0 0 lime;
-  }
-  48% {
-    text-shadow: -1px 0 0 red, 1px 0 0 lime;
-  }
-  49% {
-    text-shadow: -1px 0 0 red, 1px 0 0 lime;
-  }
-  50% {
-    text-shadow: -1px 0 0 red, 1px 0 0 lime;
-  }
-  51% {
-    text-shadow: 1px 0 0 red, -1px 0 0 blue;
-  }
-  52% {
-    text-shadow: 1px 0 0 red, -1px 0 0 blue;
-  }
-  53% {
-    text-shadow: 1px 0 0 red, -1px 0 0 blue;
-  }
-  54% {
-    text-shadow: 1px 0 0 red, -1px 0 0 blue;
-  }
-  55% {
-    text-shadow: 1px 0 0 red, -1px 0 0 blue;
-  }
-  56% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  57% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  58% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  59% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  60% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  61% {
-    text-shadow: 30px 0 0 red, -30px 0 0 lime;
-  }
-  62% {
-    text-shadow: 0 0 0 red, 0 0 0 lime;
-  }
-  63% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 blue;
-  }
-  64% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 blue;
-  }
-  65% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 blue;
-  }
-  66% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 blue;
-  }
-  67% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  68% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  69% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  70% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  71% {
-    text-shadow: 70px 0 0 red, -70px 0 0 blue;
-  }
-  72% {
-    text-shadow: 0 0 0 red, 0 0 0 blue;
-  }
-  73% {
-    text-shadow: 1px 0 0 red, -1px 0 0 blue;
-  }
-  74% {
-    text-shadow: 1px 0 0 red, -1px 0 0 blue;
-  }
-  75% {
-    text-shadow: 1px 0 0 red, -1px 0 0 blue;
-  }
-  76% {
-    text-shadow: 1px 0 0 red, -1px 0 0 blue;
-  }
-  77% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  78% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  79% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  80% {
-    text-shadow: -1px 0 0 red, 1px 0 0 blue;
-  }
-  81% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
-  }
-  82% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
-  }
-  83% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
-  }
-  84% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
-  }
-  85% {
-    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
-  }
-  86% {
-    text-shadow: -1px 0 0 red, 1px 0 0 lime;
-  }
-  87% {
-    text-shadow: -1px 0 0 red, 1px 0 0 lime;
-  }
-  88% {
-    text-shadow: -1px 0 0 red, 1px 0 0 lime;
-  }
-  89% {
-    text-shadow: -1px 0 0 red, 1px 0 0 lime;
-  }
-  90% {
-    text-shadow: -1px 0 0 red, 1px 0 0 lime;
-  }
-  91% {
-    text-shadow: 60px 0 0 lime, -60px 0 0 blue;
-  }
-  92% {
-    text-shadow: 0 0 0 lime, 0 0 0 blue;
-  }
-  92% {
-    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
-  }
-  93% {
-    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
-  }
-  94% {
-    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
-  }
-  95% {
-    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
-  }
-  96% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
-  97% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
-  98% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
-  99% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
-  100% {
-    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
-  }
+body, html{
+overflow:hidden;
+margin:0px;
+background: rgb(31, 31, 31);
+height:100vh;
+box-shadow:0px 0px 122px 25px black inset;
+background-image:url('https://i.imgur.com/eg7VIun.jpg');
+background-repeat:repeat;
+animation:noise 230ms steps(6) infinite;
+
 }
-/* Custom */
-.go-home {
-  text-align: center;
+
+.glitch-wrapper{
+padding-top:180px;
+width:100vw;
+text-align:center;
+animation:glitch 2s linear infinite;
+margin-bottom:110px;
+}
+
+
+.glitch-text, button{
+font-family: monospace;
+font-weight:bold;
+}
+
+.glitch-text::before{
+content:'ERROR 404';
+color:black;
+text-shadow:0px 0px 5px 10px black!IMPORTANT;
+-webkit-filter: blur(7px);
+-moz-filter: blur(7px);
+-o-filter: blur(7x);
+-ms-filter: blur(7px);
+filter: blur(7px);
+display:block;
+position:absolute;
+z-index:-1;
+font-size:132px;
+left:0px;
+right:0px;
+margin-top:-30px;
+opacity:.5;
+}
+
+.glitch-text{
+position:relative;
+z-index:2;
+opacity:.9;
+margin:0 auto;
+text-shadow:0px 0px 3px white;
+animation:glitch 3s infinite;
+cursor:pointer;
+font-size:52px;
+color:white;
+}
+
+
+button{
+display:block;
+opacity:.6;
+box-shadow:0px 0px 3px 6px white,0px 0px 3px white;
+text-shadow:0px 0px 3px black;
+background:white;
+border:0px;
+padding:7px;
+margin:0 auto;
+outline:none;
+cursor:pointer;
+margin-top:30px;
+font-size:16px;
+transition:200ms;
+}
+
+button:hover, button:focus, button:active {
+box-shadow:0px 0px 3px 6px black;
+text-shadow:0px 0px 3px white;
+background:black;
+color:white;
+transition:200ms;
+border-top-left-radius:5px;
+border-bottom-right-radius:5px;
+}
+ 
+
+.paused{
+animation-play-state: paused;
+}
+
+
+/* JUST RANDOM VALUES HERE! */
+@keyframes glitch{
+ 3%{text-shadow:7px 7px 0px red;}
+6%{text-shadow:-9px 4px 0px blue;transform:translate(4px,-10px) skewX(3240deg);}
+7%{text-shadow:3px -4px 0px green;}
+9%{text-shadow:0px 0px 3px white;transform:translate(0px,0px) skewX(0deg);}
+2% , 54%{transform:translateX(0px) skew(0deg);}
+55%{transform:translate(-2px,6px) skew(-5530deg);}
+56%{text-shadow:0px 0px 3px white;transform:translate(0px,0px) skew(0deg);}
+57%{text-shadow:7px 7px 0px red;transform:translate(4px,-10px) skew(-70deg);}
+58%{text-shadow:0px 0px 3px white;transform:translate(0px,0px) skew(0deg);}
+62%{text-shadow:3px -4px 0px green;transform:translate(0px,20px) skew(0deg);}
+63%{text-shadow:0px 0px 3px white;transform:translate(4px,-2px) skew(0deg);}
+64%{transform:translate(1px,3px); skew(-230deg);}
+65%{transform:translate(-7px,2px); skew(120deg);}
+66%{transform:translate(0px,0px) skew(0deg);}
+
 }
   </style>
 </head>
 <body>
-    <header class="site-header" role="banner">
-
-        <div class="wrapper"><a class="site-title" rel="author" href="/">about.me</a><nav class="site-nav">
-              <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-              <label for="nav-trigger">
-                <span class="menu-icon">
-                  <svg viewBox="0 0 18 15" width="18px" height="15px">
-                    <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"/>
-                  </svg>
-                </span>
-              </label>
-      
-              <div class="trigger"><a class="page-link" href="/aboutme.html">about.me</a></div>
-            </nav></div>
-      </header>
-      <main class="page-content" aria-label="Content">
-        <div class="wrapper">  
-    <h2 class="go-home">
-        I suggest you get <a href="https://tobehh.github.io/about.me/">home</a>, it's 404 and it's getting dark!
-        </h2>
+    <div class="glitch-wrapper">
+        <div class="glitch-text"> 
+        Error 404: not found, go <a href="https://tobehh.github.io/about.me/">home</a>!
+        </div>
     </div>
-</main>  
-        
-        <!-- Adding the glitch effect -->
-        <script> document.getElementsByTagName('body')[0].classList.add('glitch'); </script>
 </body>
 </html>
 <!-- IE needs 512+ bytes: http://blogs.msdn.com/b/ieinternals/archive/2010/08/19/http-error-pages-in-internet-explorer.aspx -->
